--- a/views/shiftreports/shiftreportsscripts.ejs
+++ b/views/shiftreports/shiftreportsscripts.ejs
@@ -24,7 +24,7 @@
             cashier = dataRow[3];
             receiptBeg = dataRow[5];
             receiptEnd = dataRow[6];
-            console.log(receiptBeg, receiptEnd)
+            // console.log(receiptBeg, receiptEnd)
         });
 
         $(document).on("click", "#addBtn", function () {
