[added service routes[notincluded in validator], layout, ui and script]

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -64,6 +64,10 @@
           <a class="collapse-item" href="/position">
             <span>Position Type</span>
           </a>
+
+          <a class="collapse-item" href="/service">
+            <span>Service</span>
+          </a>
    
           <a class="collapse-item" href="/location">
             <span>Location</span>
