--- a/views/service/servicescripts.ejs
+++ b/views/service/servicescripts.ejs
@@ -52,8 +52,8 @@
 
             var message = "";
 
-            if (name == '') { message += 'Service Name' }
-            if (price == '') { message += 'price' }
+            if (name == '') { message += 'Service Name ' }
+            if (price == '') { message += 'Price' }
 
             if (message != '') {
                 warning('Required', `Please fill up ${message}`);
