--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -68,6 +68,10 @@
           <a class="collapse-item" href="/service">
             <span>Service</span>
           </a>
+
+          <a class="collapse-item" href="/servicepackage">
+            <span>Package</span>
+          </a>
    
           <a class="collapse-item" href="/location">
             <span>Location</span>
