[added addontype and addon routes, layout, ui, and scripts]

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -73,6 +73,12 @@
             <span>Package</span>
           </a>
    
+          <a class="collapse-item" href="/addon">
+            <span>Add Ons</span>
+          </a>
+          <a class="collapse-item" href="/addontype">
+            <span>Add Ons Type</span>
+          </a>
           <a class="collapse-item" href="/location">
             <span>Location</span>
           </a>
