--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -90,7 +90,7 @@
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header py-3 header-bg">
-                        <h6 class="m-0 font-weight-bold mt-2">Employees</h6>
+                        <h6 class="m-0 font-weight-bold mt-2">Employees Table</h6>
                     </div>
                     <div class="card-body extend">
                         <div class="row mb-1">
@@ -151,7 +151,7 @@
     
 
 <!-- DataTales Example -->
-<div class="card mb-4 table-size-lg">
+<div class="card mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -189,7 +189,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table table-bordered custom-mobile-table" id="employees-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
