--- a/views/location/location.ejs
+++ b/views/location/location.ejs
@@ -48,16 +48,16 @@
                 </div>
                 <div class="card-body extend">
                     <div class="row">
-                        <div class="col-md-8">
+                        <div class="col-md-8 mb-1">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">Location Name</span>
                                 </div>
-                                <input id="locationname" name="locationname" type="text" class="form-control" placeholder="Enter Position Name" aria-label="categoryname" aria-describedby="basic-addon1">
+                                <input id="locationname" name="locationname" type="text" class="form-control" placeholder="Enter Location Name" aria-label="categoryname" aria-describedby="basic-addon1">
                             </div>
                         </div>
-                        <div class="col-md-4 align mt-1">
-                            <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-50">
+                        <div class="col-md-4">
+                            <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-25">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Add
                             </button>
@@ -69,7 +69,7 @@
     </div>
 
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size">
+<div class="card shadow mb-4 cardbody-size-580">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -77,11 +77,11 @@
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-6">
-                <h6 class="mt-2 font-weight-bold table-title">Location Data:</h6>
+                <h6 class="mt-2 font-weight-bold table-title">Location Table</h6>
             </div>
             <div class="col-md-6">
                 <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small"
+                    <input type="text" class="form-control bg-light small"
                         placeholder="Search for..." aria-label="Search"
                         aria-describedby="basic-addon2" id="search-input">
                     <div class="input-group-append">
@@ -94,7 +94,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
+        <div class="table-responsive scroll-cardbody-size-580">
             <table class="table table-bordered custom-mobile-table" id="location-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
