--- a/views/position/position.ejs
+++ b/views/position/position.ejs
@@ -14,22 +14,20 @@
                         <h6 class="m-0 font-weight-bold table-title">Update Position: </h6>
                     </div>
                     <div class="card-body">
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Position Code</label>
-                                <input id="positioncode" name="positioncode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="positioncode" name="positioncode" type="text" class="form-control" aria-describedby="basic-addon1" disabled>        
                             </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Current Position Name</label>
-                                <input id="currentPositionName" name="currentPositionName" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="currentPositionName" name="currentPositionName" type="text" class="form-control" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">New Position Name</label>
-                                <input id="positionnamemodal" name="positionnamemodal" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="positionnamemodal" name="positionnamemodal" type="text" class="form-control" placeholder="Enter new Position name" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                     </div>
@@ -54,16 +52,16 @@
                 </div>
                 <div class="card-body extend">
                     <div class="row">
-                        <div class="col-md-8">
+                        <div class="col-md-8 mb-1">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">Position:</span>
                                 </div>
-                                <input id="positionname" name="positionname" type="text" class="form-control" placeholder="Enter Position Name" aria-label="positionname" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="positionname" name="positionname" type="text" class="form-control" placeholder="Enter Position Name" aria-label="positionname" aria-describedby="basic-addon1">
                             </div>
                         </div>
-                        <div class="col-md-4 align mt-1">
-                            <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-50">
+                        <div class="col-md-4">
+                            <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-25">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Add
                             </button>
@@ -75,7 +73,7 @@
     </div>
 
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size">
+<div class="card shadow mb-4 cardbody-size-580">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -83,15 +81,15 @@
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-6">
-                <h6 class="mt-2 font-weight-bold table-title">Position Data:</h6>
+                <h6 class="mt-2 font-weight-bold table-title">Position Table</h6>
             </div>
             <div class="col-md-6">
                 <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small"
+                    <input autocomplete="off" type="text" class="form-control bg-light small"
                         placeholder="Search for..." aria-label="Search"
                         aria-describedby="basic-addon2" id="search-input">
                     <div class="input-group-append">
-                        <button class="btn sis-btn-color" type="button" id="search-button">
+                        <button class="btn sis-btn-color" type="button" id="search-button" disabled>
                             <i class="fas fa-search fa-sm"></i>
                         </button>
                     </div>
@@ -100,7 +98,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
+        <div class="table-responsive scroll-cardbody-size-580">
             <table class="table table-bordered custom-mobile-table" id="position-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
