--- a/views/shiftreports/shiftreports.ejs
+++ b/views/shiftreports/shiftreports.ejs
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="card shadow mb-4 table-size">
+    <div class="card shadow mb-4 cardbody-size-710">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
                 aria-valuemax="100">
@@ -196,7 +196,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scrollable-table-container">
+            <div class="table-responsive scroll-cardbody-size-710">
                 <table class="table table-bordered custom-mobile-table" id="shift-dataTable" width="100%"
                     cellspacing="10">
                     <thead class="table-header">
