--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -1,18 +1,8 @@
-<ul
-  class="navbar-nav sidebar-bg sidebar sidebar-dark accordion"
-  id="accordionSidebar"
->
+<ul class="navbar-nav sidebar-bg sidebar sidebar-dark accordion" id="accordionSidebar">
   <!-- Sidebar - Brand -->
-  <a
-    class="sidebar-brand d-flex align-items-center justify-content-center"
-    href="/"
-  >
+  <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
     <div class="sidebar-brand-icon">
-      <img
-        src="/images/img/asvesti.png"
-        class="custom-img mt-1 mb-1"
-        alt="Responsive image"
-      />
+      <img src="/images/img/asvesti.png" class="custom-img mt-1 mb-1" alt="Responsive image" />
     </div>
     <div class="sidebar-brand-text mx-3 text-white">Asvesti</div>
   </a>
@@ -24,8 +14,7 @@
   <li class="nav-item mt-2">
     <a class="nav-link" href="/">
       <i class="fas fa-chart-bar"></i>
-      <span class="text-white">Dashboard</span></a
-    >
+      <span class="text-white">Dashboard</span></a>
   </li>
 
   <!-- Divider -->
@@ -33,68 +22,44 @@
 
   <!-- Nav Item - Pages Collapse Menu -->
 
-    <li class="nav-item">
-      <a
-        class="nav-link"
-        href="#"
-        data-toggle="collapse"
-        data-target="#collapseTwo"
-        aria-expanded="true"
-        aria-controls="collapseTwo"
-      >
-        <i class="fas fa-fw fa-cog"></i>
-        <span class="text-white">Masters</span>
-      </a>
-      <div
-        id="collapseTwo"
-        class="collapse"
-        aria-labelledby="headingTwo"
-        data-parent="#accordionSidebar"
-      >
+  <li class="nav-item">
+    <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
+      aria-controls="collapseTwo">
+      <i class="fas fa-fw fa-cog"></i>
+      <span class="text-white">Masters</span>
+    </a>
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
 
-        <div class="bg-options py-2 collapse-inner rounded">
-          <h6 class="collapse-header text-black">Contents:</h6>
-          
-        <% if (accesstype === "Owner" || accesstype === "Manager") { %>
+      <div class="bg-options py-2 collapse-inner rounded">
+        <h6 class="collapse-header text-black">User Configuration:</h6>
+
+        <% if (accesstype==="Owner" || accesstype==="Manager" ) { %>
 
           <a class="collapse-item" href="/access">
-            <span>Access Type</span>
+            <span>Access</span>
           </a>
-          
+
           <a class="collapse-item" href="/position">
-            <span>Position Type</span>
+            <span>Position</span>
           </a>
 
-          <a class="collapse-item" href="/service">
-            <span>Service</span>
-          </a>
-
-          <a class="collapse-item" href="/servicepackage">
-            <span>Package</span>
-          </a>
-   
-          <a class="collapse-item" href="/addon">
-            <span>Add Ons</span>
-          </a>
-          <a class="collapse-item" href="/addontype">
-            <span>Add Ons Type</span>
-          </a>
           <a class="collapse-item" href="/location">
             <span>Location</span>
           </a>
+
           <a class="collapse-item" href="/employees">
             <span>Employees</span>
           </a>
-  
+
           <hr class="sidebar-divider" />
           <h6 class="collapse-header text-black">Production:</h6>
-          <a class="collapse-item" href="/materialcost">
+          <!-- <a class="collapse-item" href="/materialcost">
             <span>Material Cost</span>
-          </a>
+          </a> -->
           <a class="collapse-item" href="/vendors">
             <span>Vendor</span>
           </a>
-  
+
           <hr class="sidebar-divider" />
           <h6 class="collapse-header text-black">Sales & POS:</h6>
           <a class="collapse-item" href="/payment">
@@ -107,230 +72,204 @@
             <span>Branch</span>
           </a>
 
-        <% } %>
+          <% } %>
 
-          <a class="collapse-item" href="/products">
-            <span>Products</span>
-          </a>
+            <a class="collapse-item" href="/products">
+              <span>Products</span>
+            </a>
 
-        <% if (accesstype === "Owner" || accesstype === "Manager") { %>
-          <a class="collapse-item" href="/category">
-            <span>Category</span>
+            <% if (accesstype==="Owner" || accesstype==="Manager" ) { %>
+              <a class="collapse-item" href="/category">
+                <span>Category</span>
+              </a>
+
+
+              <hr class="sidebar-divider" />
+              <h6 class="collapse-header text-black">Authentication:</h6>
+              <a class="collapse-item" href="/users">
+                <span>Users</span>
+              </a>
+              <% } %>
+      </div>
+    </div>
+  </li>
+  <% if (accesstype==="Owner" || accesstype==="Manager" ) { %>
+
+    <% } %>
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseServices" aria-expanded="true"
+        aria-controls="collapseServices">
+        <i class="fas fa-handshake"></i>
+        <span class="text-white">Services</span>
+      </a>
+      <div id="collapseServices" class="collapse" aria-labelledby="headingServices" data-parent="#accordionSidebar">
+        <div class="bg-options py-2 collapse-inner rounded">
+          <h6 class="collapse-header">Contents:</h6>
+          <a class="collapse-item" href="/service">
+            <span>Service</span>
           </a>
-      
-  
-          <hr class="sidebar-divider" />
-          <h6 class="collapse-header text-black">Authentication:</h6>
-          <a class="collapse-item" href="/users">
-            <span>Users</span>
+          <a class="collapse-item" href="/servicepackage">
+            <span>Package</span>
           </a>
-        <% } %>
+          <a class="collapse-item" href="/addon">
+            <span>Add Ons</span>
+          </a>
+          <a class="collapse-item" href="/addontype">
+            <span>Add Ons Type</span>
+          </a>
         </div>
       </div>
     </li>
-    <% if (accesstype === "Owner" || accesstype === "Manager") { %>
-
-    <% } %>
-
-  <!-- Nav Item - Utilities Collapse Menu -->
-  <li class="nav-item">
-    <a
-      class="nav-link collapsed"
-      href="#"
-      data-toggle="collapse"
-      data-target="#collapseTransactions"
-      aria-expanded="true"
-      aria-controls="collapseTransactions"
-    >
-      <i class="fas fa-hand-holding-usd"></i>
-      <span class="text-white">Sales</span>
-    </a>
-    <div
-      id="collapseTransactions"
-      class="collapse"
-      aria-labelledby="headingTransactions"
-      data-parent="#accordionSidebar"
-    >
-      <div class="bg-options py-2 collapse-inner rounded">
-        <h6 class="collapse-header">Contents:</h6>
-        <a class="collapse-item" href="/salesdetails">
-          <span>Sales Details</span>
+    
+    <!-- Nav Item - Utilities Collapse Menu -->
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTransactions" aria-expanded="true"
+        aria-controls="collapseTransactions">
+        <i class="fas fa-hand-holding-usd"></i>
+          <span class="text-white">Sales</span>
         </a>
-        <!-- <a class="collapse-item" href="/salesitems">
+        <div id="collapseTransactions" class="collapse" aria-labelledby="headingTransactions"
+          data-parent="#accordionSidebar">
+          <div class="bg-options py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Contents:</h6>
+            <a class="collapse-item" href="/salesdetails">
+              <span>Sales Details</span>
+            </a>
+            <!-- <a class="collapse-item" href="/salesitems">
                     <i class="fas fa-cart-arrow-down"></i>
                     <span>Sales Items</span>
                 </a> -->
-        <a class="collapse-item" href="/shiftreports">
-          <span>Shifts Reports</span>
-        </a>
-        <a class="collapse-item" href="/cashreports">
-          <span>Cash Reports</span>
-        </a>
-        <a class="collapse-item" href="/productprice">
-          <span>Product Price</span>
-        </a>
-        <a class="collapse-item" href="/pricechange">
-          <span>Price Change</span>
-        </a>
-      </div>
-    </div>
-  </li>
+            <a class="collapse-item" href="/shiftreports">
+              <span>Shifts Reports</span>
+            </a>
+            <a class="collapse-item" href="/cashreports">
+              <span>Cash Reports</span>
+            </a>
+            <a class="collapse-item" href="/productprice">
+              <span>Product Price</span>
+            </a>
+            <a class="collapse-item" href="/pricechange">
+              <span>Price Change</span>
+            </a>
+          </div>
+        </div>
+      </li>
 
-  <li class="nav-item">
-    <a
-      class="nav-link collapsed"
-      href="#"
-      data-toggle="collapse"
-      data-target="#collapseInventory"
-      aria-expanded="true"
-      aria-controls="collapseInventory"
-    >
-      <i class="fas fa-boxes"></i>
-      <span class="text-white">Inventory</span>
-    </a>
-    <div
-      id="collapseInventory"
-      class="collapse"
-      aria-labelledby="headingTransactions"
-      data-parent="#accordionSidebar"
-    >
-      <div class="bg-options py-2 collapse-inner rounded">
-        <h6 class="collapse-header">Contents:</h6>
-        <a class="collapse-item" href="/productinventory">
-          <span>Product Inventory</span>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseInventory"
+          aria-expanded="true" aria-controls="collapseInventory">
+          <i class="fas fa-boxes"></i>
+          <span class="text-white">Inventory</span>
         </a>
-        <a class="collapse-item" href="/inventorycount">
-          <span>Inventory Counts</span>
-        </a>
-        <a class="collapse-item" href="/salesinventoryhistory">
-          <span>Sales Inventory History</span>
-        </a>
-        <a class="collapse-item" href="/inventoryhistory">
-          <span>Inventory History</span>
-        </a>
-        <a class="collapse-item" href="#">
-          <span>Stock Adjustment</span>
-        </a>
-        <a class="collapse-item" href="/inventoryvaluationreport">
-          <span>Valuation Report</span>
-        </a>
-        <a class="collapse-item" href="/systemlogs">
-          <span>System Logs</span>
-        </a>
-      </div>
-    </div>
-  </li>
+        <div id="collapseInventory" class="collapse" aria-labelledby="headingTransactions"
+          data-parent="#accordionSidebar">
+          <div class="bg-options py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Contents:</h6>
+            <a class="collapse-item" href="/productinventory">
+              <span>Product Inventory</span>
+            </a>
+            <a class="collapse-item" href="/inventorycount">
+              <span>Inventory Counts</span>
+            </a>
+            <a class="collapse-item" href="/salesinventoryhistory">
+              <span>Sales Inventory History</span>
+            </a>
+            <a class="collapse-item" href="/inventoryhistory">
+              <span>Inventory History</span>
+            </a>
+            <a class="collapse-item" href="#">
+              <span>Stock Adjustment</span>
+            </a>
+            <a class="collapse-item" href="/inventoryvaluationreport">
+              <span>Valuation Report</span>
+            </a>
+            <a class="collapse-item" href="/systemlogs">
+              <span>System Logs</span>
+            </a>
+          </div>
+        </div>
+      </li>
 
-  <li class="nav-item">
-    <a
-      class="nav-link collapsed"
-      href="#"
-      data-toggle="collapse"
-      data-target="#collapseRequest"
-      aria-expanded="true"
-      aria-controls="collapseRequest"
-    >
-      <i class="fas fa-handshake"></i>
-      <span class="text-white">Procurement</span>
-    </a>
-    <div
-      id="collapseRequest"
-      class="collapse"
-      aria-labelledby="headingTransactions"
-      data-parent="#accordionSidebar"
-    >
-      <div class="bg-options py-2 collapse-inner rounded">
-        <h6 class="collapse-header">Contents:</h6>
-        <a class="collapse-item" href="/purchaseorder">
-          <span>Purchase Order</span>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseRequest"
+          aria-expanded="true" aria-controls="collapseRequest">
+          <i class="fas fa-handshake"></i>
+          <span class="text-white">Procurement</span>
         </a>
-        <a class="collapse-item" href="/transferorder">
-          <span>Transfer Orders</span>
-        </a>
-        <a class="collapse-item" href="/productiontransfer">
-          <span>Production Transfer</span>
-        </a>
-      </div>
-    </div>
-  </li>
+        <div id="collapseRequest" class="collapse" aria-labelledby="headingTransactions"
+          data-parent="#accordionSidebar">
+          <div class="bg-options py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Contents:</h6>
+            <a class="collapse-item" href="/purchaseorder">
+              <span>Purchase Order</span>
+            </a>
+            <a class="collapse-item" href="/transferorder">
+              <span>Transfer Orders</span>
+            </a>
+            <a class="collapse-item" href="/productiontransfer">
+              <span>Production Transfer</span>
+            </a>
+          </div>
+        </div>
+      </li>
 
-  <li class="nav-item">
-    <a
-      class="nav-link collapsed"
-      href="#"
-      data-toggle="collapse"
-      data-target="#collapseProduction"
-      aria-expanded="true"
-      aria-controls="collapseProduction"
-    >
-      <i class="fab fa-product-hunt"></i>
-      <span class="text-white">Production</span>
-    </a>
-    <div
-      id="collapseProduction"
-      class="collapse"
-      aria-labelledby="headingTransactions"
-      data-parent="#accordionSidebar"
-    >
-      <div class="bg-options py-2 collapse-inner rounded">
-        <h6 class="collapse-header">Contents:</h6>
-        <a class="collapse-item" href="/productionmaterials">
-          <span>Materials</span>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseProduction"
+          aria-expanded="true" aria-controls="collapseProduction">
+          <i class="fab fa-product-hunt"></i>
+          <span class="text-white">Production</span>
         </a>
-        <a class="collapse-item" href="/materialcount">
-          <span>Material Count</span>
-        </a>
-        <a class="collapse-item" href="/productioncomponents">
-          <span>Components</span>
-        </a>
-        <a class="collapse-item" href="/production">
-          <span>Production</span>
-        </a>
-        <a class="collapse-item" href="/productioninventory">
-          <span>Production Inventory</span>
-        </a>
-        <a class="collapse-item" href="#">
-          <span>Production history</span>
-        </a>
+        <div id="collapseProduction" class="collapse" aria-labelledby="headingTransactions"
+          data-parent="#accordionSidebar">
+          <div class="bg-options py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Contents:</h6>
+            <a class="collapse-item" href="/productionmaterials">
+              <span>Materials</span>
+            </a>
+            <a class="collapse-item" href="/materialcount">
+              <span>Material Count</span>
+            </a>
+            <a class="collapse-item" href="/productioncomponents">
+              <span>Components</span>
+            </a>
+            <a class="collapse-item" href="/production">
+              <span>Production</span>
+            </a>
+            <a class="collapse-item" href="/productioninventory">
+              <span>Production Inventory</span>
+            </a>
+            <a class="collapse-item" href="#">
+              <span>Production history</span>
+            </a>
 
-        <a class="collapse-item" href="#">
-          <span>Logs</span>
-        </a>
-      </div>
-    </div>
-  </li>
+            <a class="collapse-item" href="#">
+              <span>Logs</span>
+            </a>
+          </div>
+        </div>
+      </li>
 
-  <li class="nav-item">
-    <a
-      class="nav-link collapsed"
-      href="#"
-      data-toggle="collapse"
-      data-target="#collapsePromoDiscount"
-      aria-expanded="true"
-      aria-controls="collapsePromoDiscount"
-    >
-      <i class="fas fa-tags"></i>
-      <span class="text-white">Promo & Discount</span>
-    </a>
-    <div
-      id="collapsePromoDiscount"
-      class="collapse"
-      aria-labelledby="headingTransactions"
-      data-parent="#accordionSidebar"
-    >
-      <div class="bg-options py-2 collapse-inner rounded">
-        <h6 class="collapse-header">Contents:</h6>
-        <a class="collapse-item" href="/promo">
-          <span>Promo</span>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePromoDiscount"
+          aria-expanded="true" aria-controls="collapsePromoDiscount">
+          <i class="fas fa-tags"></i>
+          <span class="text-white">Promo & Discount</span>
         </a>
-        <a class="collapse-item" href="/discount">
-          <span>Discount</span>
-        </a>
-      </div>
-    </div>
-  </li>
+        <div id="collapsePromoDiscount" class="collapse" aria-labelledby="headingTransactions"
+          data-parent="#accordionSidebar">
+          <div class="bg-options py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Contents:</h6>
+            <a class="collapse-item" href="/promo">
+              <span>Promo</span>
+            </a>
+            <a class="collapse-item" href="/discount">
+              <span>Discount</span>
+            </a>
+          </div>
+        </div>
+      </li>
 
-  <!-- Divider -->
-  <hr class="sidebar-divider" />
+      <!-- Divider -->
+      <hr class="sidebar-divider" />
 
 </ul>
